--- a/Module3/starter/package.json
+++ b/Module3/starter/package.json
@@ -1,19 +1,16 @@
 {
   "name": "starter",
   "version": "1.0.0",
-  "description": "First express server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.21.1"
-  },
-  "devDependencies": {
+    "express": "^4.21.1",
     "nodemon": "^3.1.7"
   }
 }
-
